# bun2nix

./: README.md  flake.nix
docs/src/: bun2nix.md  installation.md  overlay.md
nix/: bun2nix.nix  fetch-bun-deps.nix  mk-derivation.nix
nix/bun2nix/: bun2nix-js.nix
nix/checks/: arbitrary-install-completes.nix
nix/fetch-bun-deps/: build-package.nix  patched-dependencies-to-overrides.nix
nix/mk-derivation/: hook.nix  hook.sh  module-populator.nix  workspace-promoter.nix
programs/: Cargo.toml
programs/bun-rs/: Cargo.toml
programs/bun2nix/: Cargo.toml  package.json
programs/bun2nix/src/: error.rs  lib.rs  lockfile.rs
programs/bun2nix/src/lockfile/: package_deserializer.rs
programs/bun2nix/src/lockfile/package_deserializer/: prefetch.rs
programs/bun2nix/src/package/: fetcher.rs
programs/bun2nix/templates/: fetchurl.nix_template  output.nix_template
programs/cache-entry-creator/: build.zig.zon
programs/module-populator/: Cargo.toml
programs/workspace-promoter/: Cargo.toml
programs/workspace-promoter/src/: main.rs
templates/catalog/: flake.nix
templates/default/: flake.nix
templates/git-deps/: flake.nix
templates/nextjs/: bun.nix  flake.nix  package.json
templates/overrides/: flake.nix
templates/patched-deps/: bun.nix  default.nix  flake.nix  index.ts
templates/patched-deps-scoped/: bun.nix  flake.nix  index.ts
templates/phoenix/: deps.nix  flake.nix
templates/private-registry/: README.md  flake.nix
templates/react/: flake.nix
templates/tarball-deps/: flake.nix
templates/workspace-member/: README.md  default.nix  flake.nix
(+18 files in other folders)
