[[bin]]
name = "bun2nix"
path = "src/main.rs"

[dependencies]
bun-rs = {path = "../bun-rs"}
clap = {version = "4.5.31", features = ["derive", "string"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
thiserror = "2.0.11"
itertools = "0.14.0"
askama = "0.14.0"
wasm-bindgen = "=0.2.104"
log = "0.4.28"
env_logger = "0.11.8"

[lib]
name = "bun2nix"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package]
name = "bun2nix"
version = "2.0.7"
edition = "2024"
