[[bin]]
name = "workspace-promoter"
path = "src/main.rs"

[dependencies]
bun-rs = {path = "../bun-rs"}
serde_json = {version = "1.0.139", features = ["preserve_order"]}
clap = {version = "4.5.31", features = ["derive"]}
thiserror = "2.0.11"

[package]
name = "workspace-promoter"
version = "2.0.7"
edition = "2024"
